--- a/mainPage/templates/index.html
+++ b/mainPage/templates/index.html
@@ -11,8 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+    <link rel="icon" href="{% static 'images/titleLogo.png' %}"/>
 
-    <title>파리 올림픽 국가대표 테스트</title>
+    <title>동물의 숲 캐릭터 테스트</title>
 
     <style>
         @import url(//fonts.googleapis.com/earlyaccess/jejumyeongjo.css);
