--- a/questionPage/templates/question.html
+++ b/questionPage/templates/question.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,8 +11,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
+    <link rel="icon" href="{% static 'images/titleLogo.png' %}"/>
 
-    <title>성향 테스트</title>
+
+    <title>동물의 숲 캐릭터 테스트</title>
 
     <style>
         @import url(//fonts.googleapis.com/earlyaccess/jejumyeongjo.css);
@@ -114,37 +118,32 @@
         /* 미디어 쿼리 추가 */
         @media (max-width: 1200px) {
             .checkBtn_page>button {
-                font-size: 0.875rem;
-                /* 화면이 1200px 이하로 줄어들 때 폰트 크기 축소 */
+                font-size: 1rem;
             }
 
             #question_title {
                 font-size: 1.125rem;
-                /* 화면이 1200px 이하로 줄어들 때 제목 폰트 크기 축소 */
             }
         }
 
         @media (max-width: 992px) {
             .checkBtn_page>button {
-                font-size: 0.75rem;
-                /* 화면이 992px 이하로 줄어들 때 폰트 크기 축소 */
+                font-size: 1.125rem;
             }
 
             #question_title {
-                font-size: 1rem;
-                /* 화면이 992px 이하로 줄어들 때 제목 폰트 크기 축소 */
+                font-size: 1.25rem;
             }
         }
 
         @media (max-width: 768px) {
             .checkBtn_page>button {
-                font-size: 0.625rem;
-                /* 화면이 768px 이하로 줄어들 때 폰트 크기 축소 */
+                padding: 15px;
+                font-size: 1.25rem;
             }
 
             #question_title {
-                font-size: 0.875rem;
-                /* 화면이 768px 이하로 줄어들 때 제목 폰트 크기 축소 */
+                font-size: 1.5rem;
             }
         }
     </style>
