--- a/resultPage/templates/results.html
+++ b/resultPage/templates/results.html
@@ -6,7 +6,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>결과 페이지</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
+    <link rel="icon" href="{% static 'images/titleLogo.png' %}" />
+    <title>동물의 숲 캐릭터 테스트</title>
     <style>
         @import url(//fonts.googleapis.com/earlyaccess/jejumyeongjo.css);
 
@@ -104,9 +110,9 @@
             }
 
             #backBtn {
-                font-size: 16px;
-                padding: 10px;
-                width: calc(50% - 15px);
+                font-size: 20px;
+                padding: 20px;
+                width: calc(80% - 5px);
             }
         }
     </style>
