--- a/questionPage/templates/question.html
+++ b/questionPage/templates/question.html
@@ -133,6 +133,10 @@
             #question_title {
                 font-size: 1.125rem;
             }
+
+            #question_image {
+            width: 110%;
+        }
         }
 
         @media (max-width: 992px) {
@@ -143,6 +147,10 @@
             #question_title {
                 font-size: 1.25rem;
             }
+
+            #question_image {
+            width: 110%;
+        }
         }
 
         @media (max-width: 768px) {
@@ -154,6 +162,9 @@
             #question_title {
                 font-size: 1.5rem;
             }
+            #question_image {
+            width: 110%;
+        }
         }
     </style>
 </head>
