Add(html) : Kakao Adfit, Coupang partners 광고 추가

--- a/resultPage/templates/results.html
+++ b/resultPage/templates/results.html
@@ -113,6 +113,12 @@
             margin: 0 10px;
         }
 
+        .admin {
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         /* 미디어 쿼리로 화면 크기에 따른 텍스트 크기 조절 */
         @media (max-width: 1200px) {
             .result-character {
@@ -131,6 +137,12 @@
                 font-size: 18px;
                 padding: 10px;
                 width: 200px;
+            }
+
+            .admin {
+                width: 100%;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
 
@@ -156,6 +168,12 @@
             .share h2 {
                 font-size: 20px;
             }
+
+            .admin {
+                width: 100%;
+                margin-left: auto;
+                margin-right: auto;
+            }
         }
 
         @media (max-width: 480px) {
@@ -179,6 +197,12 @@
 
             .share h2 {
                 font-size: 18px;
+            }
+
+            .admin {
+                width: 100%;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
     </style>
@@ -227,6 +251,17 @@
                     </button>
                 </div>
             </div>
+        </div>
+        <div class="admin">
+            <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-dNnzQmuBOApaWPxz" data-ad-width="320"
+                data-ad-height="100"></ins>
+            <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+
+        </div>
+        <div class="admin2">
+            <a href="https://link.coupang.com/a/bLREvh" target="_blank" referrerpolicy="unsafe-url"><img
+                    src="https://ads-partners.coupang.com/banners/796561?subId=&traceId=V0-301-371ae01f4226dec2-I796561&w=320&h=480"
+                    alt=""></a>
         </div>
     </div>
 
