--- a/mainPage/templates/index.html
+++ b/mainPage/templates/index.html
@@ -1,5 +1,4 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -82,6 +81,10 @@
             text-align: center;
         }
 
+        .admin {
+
+        }
+
         /* 미디어 쿼리로 화면 크기에 따른 텍스트 크기 조절 */
         @media (max-width: 1200px) {
             #startBtn {
@@ -151,7 +154,7 @@
     </style>
 </head>
 
-<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydownn="return false">
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="return false">
     <div class="container">
         <div class="title">
             <h2 class="nanum-pen-script-regular">이쭈니연구소</h2>
@@ -164,10 +167,17 @@
         <div class="main">
             <div class="main_tag">
                 <a href="/question"><button id="startBtn">테스트 시작하기</button></a>
-                <p style="font-size: 25px;">Made By Junni</p>
                 <!-- <hr style="width: 90%; border: 0.5px solid black;"> -->
             </div>
         </div>
+        <div class="admin">
+            <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-dNnzQmuBOApaWPxz" data-ad-width="320"
+                data-ad-height="100"></ins>
+            <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+        </div>
+    </div>
+    <!-- side Bar-->
+    <div class="admin2">
     </div>
 </body>
 
