--- a/questionPage/templates/question.html
+++ b/questionPage/templates/question.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -135,8 +135,8 @@
             }
 
             #question_image {
-            width: 110%;
-        }
+                width: 110%;
+            }
         }
 
         @media (max-width: 992px) {
@@ -149,8 +149,8 @@
             }
 
             #question_image {
-            width: 110%;
-        }
+                width: 110%;
+            }
         }
 
         @media (max-width: 768px) {
@@ -162,9 +162,10 @@
             #question_title {
                 font-size: 1.5rem;
             }
+
             #question_image {
-            width: 110%;
-        }
+                width: 110%;
+            }
         }
     </style>
 </head>
@@ -308,6 +309,22 @@
 
 
 <script>
+    document.documentElement.addEventListener('touchstart', function (event) {
+        if (event.touches.length > 1) {
+            event.preventDefault();
+        }
+    }, false);
+
+    var lastTouchEnd = 0;
+
+    document.documentElement.addEventListener('touchend', function (event) {
+        var now = (new Date()).getTime();
+        if (now - lastTouchEnd <= 300) {
+            event.preventDefault();
+        } lastTouchEnd = now;
+    }, false);
+
+
     let currentQuestion = 1;
     const totalQuestions = 10;  // 총 질문 수
     let scores = {
