--- a/mainPage/templates/index.html
+++ b/mainPage/templates/index.html
@@ -152,7 +152,7 @@
     </style>
 </head>
 
-<body onselectstart="return false" ondragstart="return false" onkeydown="return false">
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="return false">
     <div class="container">
         <div class="title">
             <h2 class="nanum-pen-script-regular">이쭈니연구소</h2>
