--- a/resultPage/templates/results.html
+++ b/resultPage/templates/results.html
@@ -212,7 +212,7 @@
     </style>
 </head>
 
-<body onselectstart="return false" ondragstart="return false" onkeydownn="return false">
+<body oncontextmenu="return false" onselectstart="return false" onkeydown="return false">
     <div class="container">
         <div class="title">
             <h2 class="nanum-pen-script-regular">이쭈니연구소</h2>
